--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -29,7 +29,7 @@
   "on" : "On",
   "off" : "Off",
   "noData" : "No Data",
-  "watt" : "Watt",
+  "watt" : "Energy",
   "current" : "Current",
   "voltage" : "Voltage",
   "info" : "Info",
