--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -1,5 +1,37 @@
 {
   "powerOutlets" : "پریزها",
   "powerOutlet" : "پریز",
-  "newX" : "{name} جدید"
+  "newX" : "{name} جدید",
+  "invalidDeviceId" :  "دستگاه پیدا نشد!",
+  "someError" :  "خطایی پیش آمده!",
+  "delete" :  "حذف",
+  "deviceId" :  "شناسه دستگاه",
+  "scan" :  "اسکن",
+  "add" : "افزودن",
+  "home" :  "اصلی",
+  "charts" :  "نمودارها",
+  "schedules" :  "زمانبندی ها",
+  "settings" :  "تنظیمات",
+  "realtime" : "زمان-واقعی",
+  "power" :  "برق",
+  "maxCurrent" :  "حداکثر جریان",
+  "schedule" :  "زمان بندی",
+  "name" :  "نام",
+  "time":  "زمان",
+  "weekday_1_short" : "ش",
+  "weekday_2_short" : "ی",
+  "weekday_3_short" :  "د",
+  "weekday_4_short" :  "س",
+  "weekday_5_short" :  "چ",
+  "weekday_6_short" :  "پ",
+  "weekday_7_short" : "ج",
+  "required_field" :  "پر کردن فیلد اجباری است!",
+  "on" :  "روشن",
+  "off" : "خاموش",
+  "noData" :  "بدون داده",
+  "watt" :  "انرژی",
+  "current" :  "جریان",
+  "voltage" :  "ولتاژ",
+  "info" :  "درباره",
+  "information" : "اطلاعات"
 }
