multiple client support

--- a/lib/l10n/app_fa.arb
+++ b/lib/l10n/app_fa.arb
@@ -33,5 +33,6 @@
   "current" :  "جریان",
   "voltage" :  "ولتاژ",
   "info" :  "درباره",
-  "information" : "اطلاعات"
+  "information" : "اطلاعات",
+  "save" : "ذخیره"
 }
